--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "arraytools",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Collection of array processing tools",
+  "author": "bpostlethwaite",
+  "dependencies": {},
+  "devDependencies": {
+    "tape": ">0.2",
+    "tap": ">0.2"
+  },
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js"
@@ -17,14 +23,5 @@
     "vector",
     "processing"
   ],
-  "author": "bpostlethwaite",
-  "license": "MIT",
-  "readmeFilename": "README.md",
-  "gitHead": "08178b73ff1e443c16e61fff026c1357cc147faa",
-  "dependencies": {},
-  "devDependencies": {
-    "tape": ">0.2",
-    "tap": ">0.2"
-  }
-
+  "license": "MIT"
 }
